--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # 모델 데이터 싹다 제외 @ kenGwon
 model/*
-
+flan-t5-large-grammar-synthesis/*
+roberta-base-cola/*
 
 
 # Created by https://www.toptal.com/developers/gitignore/api/jupyternotebooks,python
